RACE2/AKS_Istio_Deployments/RACE2.FrontEnd/RACE2FrontEndDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: race2frontend-deployment
  namespace: race2frontend
spec:
  selector:
    matchLabels:
      app: race2frontend-pod
  template:
    metadata:
      labels:
        app: race2frontend-pod
    spec:
      containers:
      - name: race2frontend-container
        image: race2acr.azurecr.io/race2frontend:v1
        ports:
        - containerPort: 80
