RACE2/AKS_Istio_Deployments/RACE2.FrontEnd/RACE2FrontEndService.yaml
apiVersion: v1
kind: Service
metadata:
  name: race2frontend-service
spec:
  selector:
    app: race2frontend-pod
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
