RACE2/AKS_Istio_Deployments/RACE2.FrontEnd/RACE2FrontEndGateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: race2frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
        - "race2app.gov.uk"
    port:
      number: 80
      name: http
      protocol: HTTP
