RACE2/AKS_Istio_Deployments/RACE2.FrontEnd/RACE2FrontEndVirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: race2frontend-virtualservice
spec:
  hosts:
  - "race2app.gov.uk"
  gateways:
  - race2frontend-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: race2frontend-service
